# fastapi-template

./: Dockerfile  LICENSE  Makefile  README.md  alembic.ini  config.toml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_02_0633-01f99f0a23b6_add_user.py  2024_07_07_1957-26d65850ebc0_add_item.py
scripts/: DC_check_dotenv.sh  DC_logs.sh  DC_prune.sh  DC_rmvolumes.sh  DC_shell.sh  dotenv_from_toml.sh  makefile_help.sh  run_server.sh
scripts/docker-compose/: check_dotenv.sh
scripts/makefile/: alembic_env.sh  alembic_ini.sh  docker_logs.sh  docker_rmvolumes.sh  docker_shell.sh  dotenv_from_toml.sh  help.sh
src/: main.py
src/api_v1/: __init__.py  router.py
src/api_v1/endpoints/: items.py  user.py
src/apps/items/: dependencies.py  schemas.py  services.py
src/apps/items/repositories/: abstract.py  sqla.py
src/apps/user/: models.py  repositories.py  schemas.py
src/core/database/: helper.py
src/core/dependencies/: __init__.py  get_db_session.py
src/core/models/: base.py
src/core/models/mixins/: __init__.py
src/core/settings/: api_literals.py  app_factory.py  docker_env.py  fastapi_app.py  get_base_dir.py  settings.py  settings_model.py
tests/: conftest.py
